# libsoundplane

./: .gitignore  CMakeLists.txt  Makefile  README.md
mec/: CMakeLists.txt  eigen_cmd.cpp  mec.cpp  mec.h  osc_cmd.cpp  soundplane_cmd.cpp
python/: setup.py  soundplanepy.cpp  soundplanepy.h  soundplanepy.pyx  soundplanepyzzzz.zzpxd
soundplanelite/: CMakeLists.txt  MLSignal.h  SoundplaneDriver.h  TouchTracker.h
soundplanelite/source/: LibusbSoundplaneDriver.cpp
soundplanelite/source/neon/: MLVector.h
soundplanelite/tests/: CMakeLists.txt  touchtrackertest.cpp
src/: LibusbSoundplaneDriver.cpp  LibusbSoundplaneDriver.h  MLDSP.h  MLSignal.cpp  MLVector.cpp  MLVector.h  SoundplaneModelA.h  SoundplaneServer.cpp
src/neon/: MLDSP.h  MLVector.h
src/python/: PythonListener.cpp  PythonListener.h  PythonListener.pxd  TouchTrackerListener.cpp  TouchTrackerListener.h  libsoundplane.pyx  soundplanepy.cpp
src/tests/: touchtrackertest.cpp
test/: soundplaned-test.py  soundplanetest.cpp  touchtrackertest.cpp  touchtrackertest.py
